# invoice-parser-api

./: .env.example  .gitignore  Dockerfile  Makefile  fly.toml  go.mod  go.sum  main.go  openapi.yaml  render.yaml
.github/workflows/: ci.yml
docs/: stripe-setup.md
internal/api/: handler.go  handler_test.go  metrics.go  middleware.go  middleware_test.go  oauth.go  router.go  sentry.go  testhelper_test.go
internal/auth/: apikey.go  apikey_test.go
internal/billing/: stripe.go  stripe_test.go
internal/db/: sqlite.go  sqlite_test.go
internal/parser/: doctypes.go  invoice.go  invoice_test.go
landing/: index.html
portal/: index.html
scripts/: healthcheck.sh
sdk/javascript/: README.md  package.json
sdk/javascript/src/: index.d.ts  index.js
sdk/python/: README.md  pyproject.toml
sdk/python/invoiceparser/: __init__.py  client.py
