[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invoiceparser"
version = "1.0.0"
description = "Python SDK for the InvoiceParser API"
requires-python = ">=3.9"
dependencies = ["requests>=2.28"]

[project.urls]
Homepage = "https://invoiceparser.dev"
Documentation = "https://invoiceparser.dev#docs"
